# galliary-server

./: .env  .gitignore  Cargo.toml
migrations/2022-04-09-054155_init/: down.sql  up.sql
prisma/: schema.prisma
prisma-cli/: .env  Cargo.toml
prisma-cli/prisma/: schema.prisma
prisma-cli/prisma/migrations/20220414235143_init/: migration.sql
prisma-cli/prisma/migrations/20220415001125_userconnection/: migration.sql
src/: db.rs  lib.rs  main.rs  prisma.rs  schema.rs
src/controllers/: album.rs  mod.rs
src/controllers/album/: mod.rs  mutation.rs  query.rs  types.rs  validators.rs
src/controllers/image/: mutation.rs  query.rs
src/entity/: album.rs  category.rs  group.rs  group_member.rs  image.rs  mod.rs  moderator_notifications.rs  notification.rs  prelude.rs  report.rs  sea_orm_active_enums.rs  session.rs  token.rs  user.rs  user_connection.rs
src/models/: album.rs
src/structs/: enums.rs  mod.rs
src/util/: state.rs
