[package]
name = "galliary-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
env_logger = "0.9"
log = "0.4"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
anyhow = "1.0.56"
sea-orm = { version = "0.7.1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
tracing-subscriber = "0.3.11"
tokio = { version = "1.17.0", features = ["full"] }
async-graphql = "3.0.38"
GraphQL = "0.1.0"
async-graphql-actix-web = "3.0.38"


[features]
