[package]
name = "galliary-server"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "galliary-bin"

[lib]
path = "src/lib.rs"
name = "galliary"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
env_logger = "0.9"
log = "0.4"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
anyhow = "1.0.56"
sea-orm = { version = "0.7.1", features = ["macros", "sqlx-postgres", "runtime-tokio-native-tls", "with-json"] }
tracing-subscriber = "0.3.11"
tokio = { version = "1.17.0", features = ["full"] }
async-graphql = { version = "3.0.38", features = ["dataloader", "chrono", "uuid"] }
async-graphql-actix-web = "3.0.38"
chrono = "0.4.19"

[features]
