[package]
name = "galliary-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["prisma-cli"]

[lib]
path = "src/lib.rs"
name = "galliary"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
env_logger = "0.9"
log = "0.4"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
# sea-orm = { version = "0.7.1", features = ["macros", "sqlx-postgres", "runtime-tokio-native-tls", "with-json"] }
tracing-subscriber = "0.3.11"
tokio = { version = "1.17.0", features = ["full"] }
async-graphql = { version = "3.0.38", features = ["dataloader", "chrono", "uuid"] }
async-graphql-actix-web = "4.0.1"
chrono = "0.4.19"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.5.0" }

[features]
